# LAB_OOP

lab1/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  test
lab1/src/: box_cap.cpp  box_cap.h  main.cpp
lab1/tests/: test.cpp
lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  test  tests.txt
lab2/include/: money.h
lab2/src/: main.cpp  money.cpp
lab2/tests/: test.cpp
lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  test
lab3/include/: figure.hpp  point.hpp  rectangle.hpp  rectangle.hpp.save  rhombus.hpp  trapezoid.hpp
lab3/src/: figure.cpp  main.cpp  point.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
lab3/tests/: 2.in  test.cpp  test.cpp.save
lab4/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  test
lab4/include/: array.hpp  figure.hpp  point.hpp  rectangle.hpp  rhombus.hpp  trapezoid.hpp
lab4/src/: main.cpp
lab4/tests/: test.cpp
lab5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  test
lab5/include/: Allocator.hpp  DynamicArray.hpp
lab5/src/: main.cpp
lab5/tests/: test.cpp
lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log.txt  main
lab6/include/: druid.hpp  elf.hpp  knight.hpp  npc.hpp
lab6/src/: druid.cpp  elf.cpp  knight.cpp  main.cpp  npc.cpp
lab7/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  test
lab7/include/: druid.hpp  elf.hpp  knight.hpp  npc.hpp  obs.hpp
lab7/src/: druid.cpp  elf.cpp  knight.cpp  main.cpp  npc.cpp
lab7/tests/: test.cpp
